tests/invalid/readonly/const_readonly_reassign.pts
prototype A {
    const readonly int x = 0;

    function set() : void {
        self.x = 1;
    }
}
